# zvonila-backend

./: .env  .env.example  .gitignore  Dockerfile  Makefile  docker-compose.dev.yaml  docker-compose.yaml  docker-compose.yml  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 0fe78afa075c_chat_table.py  49c16db0d32f_user_table.py  a2e8ece8e933_messages_table.py  edc0fb381d38_call_table.py
src/: config.py  database.py  dependencies.py
src/auth/: dependencies.py  exceptions.py  router.py  schemas.py  service.py  utils.py
src/call/: dependencies.py  models.py  repository.py  router.py  schemas.py  service.py
src/chat/: dependencies.py  facade.py  models.py  repository.py  router.py  schemas.py  service.py
src/core/: dependencies.py
src/message/: dependencies.py  facade.py  models.py  repository.py  router.py  schemas.py  service.py
src/sessions/: dependencies.py  exceptions.py  models.py  repository.py  router.py  schemas.py  service.py
src/user/: dependencies.py  exceptions.py  models.py  repository.py  router.py  schemas.py  service.py
src/websocket/: dependencies.py  manager.py  router.py
